--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
     "scripts": {
         "cs:check": "phpcs",
         "cs:fix": "phpcbf",
-        "cs:stan": "phpstan analyse src test -level=7",
+        "cs:stan": "phpstan analyse src test --level=7",
         "test": [
             "@test:unit"
         ],
