--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
         "sort-packages": true,
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true,
-            "magento/composer-dependency-version-audit-plugin": true
+            "magento/composer-dependency-version-audit-plugin": true,
+            "php-http/discovery": true
         }
     },
     "scripts": {
