--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "require": {
         "gubee/sdk": "@dev",
         "magento/framework": "^103",
-        "magento/module-catalog": "^104"
+        "magento/module-catalog": "^104",
+        "symfony/console": "^4"
     },
     "autoload": {
         "psr-4": {
