--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "gubee/sdk": "@dev",
         "magento/framework": "^103",
         "magento/module-catalog": "^104",
+        "magento/module-configurable-product": "^100",
         "symfony/console": "^4"
     },
     "autoload": {
